--- a/md/address/link.html
+++ b/md/address/link.html
@@ -730,6 +730,6 @@
         
     
 
-    </body>
+    <div align="center"><a href="https://beian.miit.gov.cn/" target="_blank">京ICP备2022029121号-1</a></div>
 </html>
 
