--- a/md/base/mst.html
+++ b/md/base/mst.html
@@ -1859,6 +1859,6 @@ volatile-lfu:&#x5BF9;&#x8BBE;&#x7F6E;&#x8FC7;&#x671F;&#x65F6;&#x95F4;&#x7684;key
         
     
 
-    </body>
+    <div align="center"><a href="https://beian.miit.gov.cn/" target="_blank">京ICP备2022029121号-1</a></div>
 </html>
 
