--- a/md/base/算法.html
+++ b/md/base/算法.html
@@ -2476,6 +2476,6 @@ v[i-1][j-w[i]]: &#x88C5;&#x5165;i-1&#x5546;&#x54C1;&#x5230;&#x5269;&#x4F59;&#x7A
         
     
 
-    </body>
+    <div align="center"><a href="https://beian.miit.gov.cn/" target="_blank">京ICP备2022029121号-1</a></div>
 </html>
 
