--- a/md/database/redis.html
+++ b/md/database/redis.html
@@ -873,6 +873,6 @@ hsetnx &lt;key&gt;&lt;field&gt;&lt;value&gt;&#x5C06;&#x54C8;&#x5E0C;&#x8868; key
         
     
 
-    </body>
+    <div align="center"><a href="https://beian.miit.gov.cn/" target="_blank">京ICP备2022029121号-1</a></div>
 </html>
 
