--- a/md/jvm/jvm.html
+++ b/md/jvm/jvm.html
@@ -2232,6 +2232,6 @@ ParallelGCThreads) &#x7684;1/4&#x5DE6;&#x53F3;&#x3002; -XX: InitiatingHeap0ccupa
         
     
 
-    </body>
+    <div align="center"><a href="https://beian.miit.gov.cn/" target="_blank">京ICP备2022029121号-1</a></div>
 </html>
 
