--- a/md/base/JUC.html
+++ b/md/base/JUC.html
@@ -706,6 +706,6 @@ Space losses: 0 bytes internal + 4 bytes external = 4 bytes total
         
     
 
-    </body>
+    <div align="center"><a href="https://beian.miit.gov.cn/" target="_blank">京ICP备2022029121号-1</a></div>
 </html>
 
