--- a/md/base/template.html
+++ b/md/base/template.html
@@ -812,6 +812,6 @@ public class ${NAME} {
         
     
 
-    </body>
+    <div align="center"><a href="https://beian.miit.gov.cn/" target="_blank">京ICP备2022029121号-1</a></div>
 </html>
 
