--- a/md/kecheng/从0开始学架构.html
+++ b/md/kecheng/从0开始学架构.html
@@ -858,6 +858,6 @@ analysis&#xFF0C;&#x6545;&#x969C;&#x6A21;&#x5F0F;&#x4E0E;&#x5F71;&#x54CD;&#x5206;
         
     
 
-    </body>
+    <div align="center"><a href="https://beian.miit.gov.cn/" target="_blank">京ICP备2022029121号-1</a></div>
 </html>
 
