--- a/md/kecheng/搭建秒杀系统.html
+++ b/md/kecheng/搭建秒杀系统.html
@@ -1208,6 +1208,6 @@ http {
         
     
 
-    </body>
+    <div align="center"><a href="https://beian.miit.gov.cn/" target="_blank">京ICP备2022029121号-1</a></div>
 </html>
 
